<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/paintCard"
    android:layout_width="300dp"
    android:layout_height="135dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Color -->
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="50dp">

            <View
                android:id="@+id/preview_selected_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />
        </androidx.cardview.widget.CardView>

        <!-- Text content -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/paint_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paint_name"
                android:textColor="#212121"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/paint_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/small_description"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/paint_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/small_description"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/paint_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/small_description"
                android:textColor="#666666"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Settings Button -->
    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:orientation="vertical"
       >

        <ImageButton
            android:id="@+id/ivPaintSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings" />

        <ImageButton
            android:id="@+id/ivPaintShare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/share"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_share" />
    </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
