<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/projectCard"
    android:layout_width="175dp"
    android:layout_height="275dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#f5f5f5"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Avatar-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tvProjectAvatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="12dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedCorner"
            app:srcCompat="@drawable/default_avatar" />

        <!-- Project Info-->
        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Product Name"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/small_description"
            android:textColor="#666666"
            android:textSize="14sp" />

        <!-- Actions -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ivProjectSettings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/settings"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/ivProjectShare"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/share"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_share" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
