<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createPaintTracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="#f5f5f5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
            android:id="@+id/createPaintTrackerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/paint_tracker"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <!--Pick color Button-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/choose_color" />


    <androidx.cardview.widget.CardView
        android:id="@+id/createColorPicker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/color_picker_card" >

        <View
            android:id="@+id/create_preview_selected_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom = "8dp"
        android:textSize="16sp"
        android:text="Note: Colors displayed are for reference only" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
  
        app:counterTextColor="@color/counter_text"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPaintName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Paint Color Name"
            android:textColor="#242424"
            android:textColorHint="#888888"
            android:background="@drawable/input_field"
            android:inputType="textPersonName"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
  
        app:counterTextColor="@color/counter_text"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createBrandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Brand (e.g. Mr.Hobby)"
            android:textColor="#242424"
            android:textColorHint="#888888"
            android:background="@drawable/input_field"
            android:inputType="textPersonName"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
  
        app:counterTextColor="@color/counter_text"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPaintType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field"
            android:hint="Type (e.g. Enamel)"
            android:maxLength="30"
            android:textColor="#242424"
            android:textColorHint="#888888" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxBackgroundMode="none"
        app:counterEnabled="true"
        app:counterMaxLength="300"
  
        app:counterTextColor="@color/counter_text"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPaintNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field"
            android:gravity="top"
            android:hint="Notes (e.g. Paint Ratio, Preferred Thinner, etc)"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:minLines="4"
            android:padding="12dp"
            android:textColor="#242424"
            android:textColorHint="#888888" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPaintSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#00bcd4"
        android:text="Set Color" />

    </LinearLayout>

